# minimization

./: .editorconfig  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  compile.bat  temp.txt  test_results.txt
doc/: (t,m,s)-nets docum.docx  25_12_17_Исследование методов оптимизации на примере различных функций.docx  DFP.docx  Metod_BFGS.docx  Metod_Powell.docx  Графики тестовых функций.docx  Исследование методов оптимизации на примере различных функций.docx  Метод Hessian Free.docx  Тестовые функции.docx
documentation/: Docum.docx
include/: NiederreiterBaseTwo.hpp  StopCondition.hpp  TMSNetTestElement.hpp  TestingSuite.hpp  bfgs.hpp  dfp.hpp  global_min.hpp  hessian_free.hpp  iteration_object.hpp  math.hpp  matrix.h  nesterov.hpp  niederreitergenerator.hpp  powell.hpp  sobolseqgenerator.h  sobolseqgenerator.hpp  stopCondition.h  tms.h  tmsnet.h  tmsnet.hpp  vector.h
src/: NiederreiterBaseTwo.cpp  StopCondition.cpp  bfgs.cpp  dfp.cpp  global_min.cpp  hessian_free.cpp  iteration_object.cpp  main.cpp  math.cpp  matrix.cpp  nesterov.cpp  niederreitergenerator.cpp  powell.cpp  sobolseqgenerator.cpp  stopCondition.cpp  tinyxml2.cpp  tms.cpp  tmsnettests.cpp  vector.cpp
test-NiederreiterBaseTwo/: Makefile  README.md  test_NiederreiterBaseTwo.cpp
test-global/: Makefile  main.cpp  main.exe.stackdump  test_results.txt
test-methods/: .gitignore  CMakeLists.txt  Makefile  README.md  compare_tests.txt  compile.bat  main.exe.stackdump  test-BFGS.txt  test-DFP.txt  test-Hessian-Free.txt  test-Nesterov.txt  test-Powell.txt  test_bfgs.txt  test_dfp.txt  test_hessianfree.txt  test_methods.cpp  test_nesterov.txt  test_powell.txt  test_result.csv
test-tms/: CorrelationTest.hpp  DefaultTest.txt  Makefile  README.md  TMSNetTestElement.hpp  TMSParametersTest.hpp  UniquenessTest.cpp  UniquenessTest.hpp  test.cpp
tests/: CMakeLists.txt  DefaultTest.txt  TEST_README.txt  test.cpp
tools/: script1.py  script2.py
